fix: tax deadlines card having too much min-width on mobile

--- a/src/components/TaxOverview/taxDeadlinesCard.scss
+++ b/src/components/TaxOverview/taxDeadlinesCard.scss
@@ -1,4 +1,10 @@
 .Layer__TaxOverview {
+  @media (width <= 500px) {
+    &__Card--deadlines {
+      min-width: unset;
+    }
+  }
+
   &__Card--deadlines {
     min-width: 25rem;
   }
